Final Project update
Accidentally was working on non-github files

--- a/index.html
+++ b/index.html
@@ -31,13 +31,21 @@
 
 <div><a href="#pageTop" class="backToTop" id="pageTop">Top</a></div> 
 
-  <div><img src="./images/ceees.svg" class="logo"></div>
+  <!--<div><img src="./images/ceeesround.png" class="logo"></div>-->
 
-  <button>(?)</button>
+<div class="logo">CEE'ES</div> 
 
+<button>(?)</button>
   <p>Visual identities, websites, publications and other printed and digital matter for cultural and commercial clients. Founded in 2016 by Sebastian Diaz-Mihell.</p>
 
-  <div><img src="./images/musictext.png" class="music"></div>
+ <div><img src="./images/musictext.png" class="music"></div>
+
+<div>
+  <img src="./images/thug.png" id="thug" alt="Young Thug">
+  <img src="./images/uzi.png" id="uzi" alt="Lil Uzi Vert">
+</div>
+
+
 
  
 <!--<section id="aboutSection">
