Finalizing Final Project(leaving on a good note) before class end
Making sure website isn’t blowing up before I leave

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </nav>
 
 <div id="pageTop"></div>
-<div><a href="#pageTop" id="backToTop">Top</a></div> 
+<a href="#pageTop" id="backToTop">Top</a>
 
   <!--<div><img src="./images/ceeesround.png" class="logo"></div>-->
 
@@ -51,7 +51,12 @@
  <section id="graphicDesignSection">
    <div>Graphic Design</div>
    <div>
-    Graphic design stuff goes here
+    - Graphic design contemt goes here.
+    Graphic design contemt goes here.
+    Graphic design contemt goes here.
+    Graphic design contemt goes here.
+    Graphic design contemt goes here.
+    Graphic design contemt goes here.
    </div>
  </section>
 
