Final Project (Presentation Ready)
Checking links

--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
 
  <section id="graphicDesignSection">
    <div>Graphic Design</div>
+   <div><img src="./images/type.jpg" id="typeposter"></div>
+   <div><img src="./images/redposter.jpg" id="redposter"></div>
+
    <div>
     - Graphic design contemt goes here.
     Graphic design contemt goes here.
