Final Site Update
Added content and finished fixing some functionality issues

--- a/index.html
+++ b/index.html
@@ -21,11 +21,8 @@
   <a href="#graphicDesignSection" title="Graphic Design" class="active">
     <span class="label">Graphic Design</span>
   </a>
-  <a href="#" title="Blog">
-    <span class="label">Other</span>
-  </a>
-  <a href="#" title="Contact">
-    <span class="label">Info</span>
+  <a href="#contactSection" title="Contact">
+    <span class="label">Contact</span>
   </a>
 </nav>
 
@@ -37,31 +34,59 @@
 <div class="logo">CEE'ES</div> 
 
 <button>(?)</button>
-  <p>Visual identities, websites, publications and other printed and digital matter for cultural and commercial clients. Founded in 2016 by Sebastian Diaz-Mihell.</p>
+  <p>Visual identities, websites, publications and other printed and digital matter for cultural and commercial clients. Founded in 2016 by Sebastian & Christopher Diaz-Mihell.</p>
 
  <section id="musicSection">
-   <div><img src="./images/musictext.png" class="music"></div>
-   <div>
-     <img src="./images/thug.png" id="thug" alt="Young Thug" />
-     <img src="./images/uzi.png" id="uzi" alt="Lil Uzi Vert" />
-     <div class="clearit"></div>
+   <div class="music">Music</div>
+   <div class="musicinfo">
+   Coming Soon. We will be introducing a weekly playlist featuring a variety of music and music videos.
    </div>
+   <div>
+     <img src="./images/uzi.png" id="uzi" alt="Lil Uzi Vert" />   
+     <img src="./images/thug.png" id="thug" alt="Young Thug" />
+   </div>
+   <div class="clearit"></div>
  </section>
 
  <section id="graphicDesignSection">
-   <div>Graphic Design</div>
+   <div class="gd">Graphic Design</div>
+   <div><img src="./images/ping.gif" id="ping"></div>
+   <div><img src="./images/orange.png" id="orangeposter"></div>
+   <div><img src="./images/figures.png" id="figposter"></div>
    <div><img src="./images/type.jpg" id="typeposter"></div>
    <div><img src="./images/redposter.jpg" id="redposter"></div>
+   <div><img src="./images/yellow.jpg" id="floralisposter"></div>
 
+   <div class="clearit"></div>
    <div>
-    - Graphic design contemt goes here.
-    Graphic design contemt goes here.
-    Graphic design contemt goes here.
-    Graphic design contemt goes here.
-    Graphic design contemt goes here.
-    Graphic design contemt goes here.
+    Graphic Design content will be featured here. We will be updating you guys with some of our favorite graphic design work from around the world. 
    </div>
  </section>
+
+
+ <section id="contactSection">
+ <div class="grid">
+  <div class="col-2-3">
+     <div class="contact">Contact</div>
+  </div>
+  <div class="col-1-3">
+    <div>Sebastian Diaz-Mihell</div>
+     <div>
+       <a href="mailto:sdiazmihell@gmail.com" class="contact">sdiazmihell(at)gmail.com</a>
+     </div>
+     <div>+1 310 801 9739</div>
+  </div>
+</div>
+
+<div class="col-1-3">
+    <div>Christopher Diaz-Mihell</div>
+     <div>
+       <a href="mailto:cdiazmihell@gmail.com" class="contact">cdiazmihell(at)gmail.com</a>
+     </div>
+     <div>+1 310 801 9738</div>
+  </div>
+</div>
+</section>
 
  
 <!--<section id="aboutSection">
